--- a/three.html
+++ b/three.html
@@ -16,18 +16,27 @@
                     <img src="./images/icon-sedans.svg" alt="seduns">
                 </div>
                 <h1>SEDANS</h1>
+                <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on
+                    your next road trip.</p>
+                <button class="fi"><a href="#">Learn More</a></button>
             </section>
             <section class="sec">
                 <div>
                     <img src="./images/icon-suvs.svg" alt="suvs">
-                    <h1>SUVS</h1>
                 </div>
+                <h1>SUVS</h1>
+                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family
+                    vacation and off-road adventures.</p>
+                <button class="se"><a href="#">Learn More</a></button>
             </section>
             <section class="thr">
                 <div>
                     <img src="./images/icon-luxury.svg" alt="luxury">
                 </div>
                 <h1>LUXURY</h1>
+                <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+                    rental and arrive in style.</p>
+                    <button class="th"><a href="#">Learn More</a></button>
             </section>
         </main>
     </header>
